tests/valid/core/option_some.facet
fn main() -> affine core::option::Option<affine isize> {
  core::option::Option<affine isize>::Some(1)
}
