tests/invalid/module/unknown_qualified_type_path.facet
fn main() -> affine missing::option::Option<affine isize> {
  core::option::Option<affine isize>::Some(1)
}
